--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,44 @@
 * {
-  font-family: 'roboto_condensedbold';
+  /* font-family: 'roboto_condensedbold', arial; */
+  font-family: arial;
 }
 
+html {
+  margin: 0;
+}
 p {
-  font-size: 1.33rem;
+  font-style: italic;
+  color: #5c626d;
+}
+.topbar {
+}
+.container {
+  max-width: 1140px;
+  margin-left: 16% auto;
+  margin-right: 16% auto;
+}
+.small {
+  font-size: 0.65rem;
+}
+img {
+  border-radius: 25px;
+}
+.blockquote-footer {
   color: #7cc576;
 }
 
-.navbar .container {
-  justify-items: auto;
-  margin-left: 16.4%;
-  margin-right: 16.4%;
-}
-
-.navbar .nav-link {
-  text-align: right;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding-left: 1rem !important;
-  padding-right: 1rem !important;
-  margin-top: 3.33em;
-  margin-bottom: 3.33em;
-}
-
-.carousel-caption {
-  font-size: 2rem;
-  text-align: center;
-  top: 10%;
-  bottom: auto;
-}
-
-h1 {
-  color: whitesmoke;
-  display: block;
-  margin-block-start: 0.67em;
-  margin-block-end: 0.67em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
-.navbar .nav-item-active {
-  border-left: #444 3px solid;
-}
-
-.carousel-item {
-  height: 600px;
-}
-
-.carousel-image-1 {
-  background: url('../img/image1.jpg');
+#jumbotronTop {
+  background-image: url('../img/banner1.jpg');
   background-size: cover;
 }
-
-.carousel-image-2 {
-  background: url('../img/image2.jpg');
-  background-size: cover;
+#jumbotronMiddle {
+  border-radius: 25px;
+  background-image: url(https://via.placeholder.com/500x1400);
 }
 
-.carousel-image-3 {
-  background: url('../img/image3.jpg');
-  background-size: cover;
-}
-
-#marketing-module {
-  width: 100%;
-  position: relative;
-  min-height: 250px;
-  background: url('../img/lights.jpg');
-  background-repeat: round;
-  text-align: center;
-  color: white;
-}
-
-.dark-overlay {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-}
-
-div {
-  text-align: center;
-}
-
-span {
-  display: inline-block;
-  vertical-align: right;
-}
-
-.outer-line {
-  width: 40%;
-  border-top: 1px solid grey;
-  padding: 2%;
-}
-
-#contact-us {
+#jumbotronEnd {
   background-color: #7cc576;
+}
+#black-footer {
+  font-size: 14px;
 }
